--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,10 @@ __pycache__/
 *.safetensors
 *.bin
 *.log
-.ipynb_checkpoints/
 .env
+
+
+# Jupyter/Colab/IDE 관련
+*.DS_Store
+.ipynb_checkpoints/
+.idea/
